<resources>
    <string name="app_name">DailySelfie</string>
    <string name="txt_fitnesstype">Fitness Type</string>
    <string name="txt_fitnesstyperadio1">Weight Gain</string>
    <string name="txt_fitnesstyperadio2">Weight Loss</string>
    <string name="txt_height">Height (cm)</string>
    <string name="txt_weight">Weight (kg)</string>
    <string name="txt_targetw">Target Weight (kg)</string>
    <string name="txt_timeP">Challange Period</string>
    <string name="txt_btn_submit">Submit</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="txt_maternity">My Pregnancy day by day</string>
    <string name="txt_size">Waist size (cm)</string>
    <string name="txt_deliveryDate">Expected Birth Date</string>
    <string name="txt_sepNote">Special Note</string>
    <string name="txt_chaName">Challenge Name</string>
    <string name="txt_childgro">Child Growth</string>
    <string name="txt_bdy">Date of Birth</string>

    <array name="challenges">
        <item>Challenge Type</item>
        <item>Hair</item>
        <item>Health</item>
        <item>Nail</item>
        <item>Family</item>
    </array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_fitness">FitnessActivity</string>
    <string name="title_activity_main_drawer">MainDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_challange">AddChallangeActivity</string>
    <string name="title_activity_child_growth">ChildGrowthActivity</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_maternity">MaternityActivity</string>
    <string name="title_activity_noshave">NoshaveActivity</string>
    <string name="title_activity_post_maternity">PostMaternityActivity</string>
    <string name="title_activity_time_line">TimeLine</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>

    <string name="FireBaseLink">https://dailyselfie.firebaseio.com</string>

    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_lname">Enter your last name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_confirmpassword">Re-enter the password</string>

    <string name="Propicselect">Take a photo or select an image from Gallery</string>
    <string name="title_activity_activity_feed">ActivityFeed</string>
    <string name="title_activity_my_challeges">MyChallegesActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="app_id">1529806223987699</string>

    <array name="challengePeriodType">
        <item>Challange Period Type</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Weekly</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about_us">AboutUs</string>

</resources>
