<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerFitness"
    tools:context="com.sliit.dailyselfie.FitnessActivity">




 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">


    <TextView
        android:id="@+id/infohedding"
        android:text="My Fitness Pal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="#FF9800" />

    <RadioGroup
        android:id="@+id/fitnessradioGroup"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:text="@string/txt_fitnesstyperadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

        <RadioButton
            android:text="@string/txt_fitnesstyperadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

    </RadioGroup>


    <EditText
        android:hint="@string/txt_chaName"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
         android:orientation="vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"></LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_height"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Feets"
                    android:gravity="center_vertical|center_horizontal" />

                <com.vi.swipenumberpicker.SwipeNumberPicker
                    android:id="@+id/snp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:snp_numberColor="@android:color/white"
                    app:snp_arrowColor="@android:color/white"
                    app:snp_backgroundColor="@color/colorAccent"
                    app:snp_max="8"
                    app:snp_min="1"
                    app:snp_value="5"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Inches"
                    android:gravity="center_vertical|center_horizontal" />

                <com.vi.swipenumberpicker.SwipeNumberPicker
                    android:id="@+id/snp2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:snp_numberColor="@android:color/white"
                    app:snp_arrowColor="@android:color/white"
                    app:snp_backgroundColor="@color/colorAccent"
                    app:snp_max="11"
                    app:snp_min="1"
                    app:snp_value="5"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

        </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_marginBottom="5dp">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"></LinearLayout>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/txt_weight"
                     android:gravity="center_vertical"
                     android:layout_marginRight="10dp"
                     android:textSize="15sp" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:text="Kilograme"
                     android:gravity="center_vertical|center_horizontal" />

                 <com.vi.swipenumberpicker.SwipeNumberPicker
                     android:id="@+id/snp3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:snp_numberColor="@android:color/white"
                     app:snp_arrowColor="@android:color/white"
                     app:snp_backgroundColor="@color/colorAccent"
                     app:snp_max="300"
                     app:snp_min="25"
                     app:snp_value="5"
                     android:layout_marginRight="10dp"/>

             </LinearLayout>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_marginBottom="5dp">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"></LinearLayout>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/txt_targetw"
                     android:gravity="center_vertical"
                     android:layout_marginRight="10dp"
                     android:textSize="15sp" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:text="Kilograme"
                     android:gravity="center_vertical|center_horizontal" />

                 <com.vi.swipenumberpicker.SwipeNumberPicker
                     android:id="@+id/snp4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:snp_numberColor="@android:color/white"
                     app:snp_arrowColor="@android:color/white"
                     app:snp_backgroundColor="@color/colorAccent"
                     app:snp_max="300"
                     app:snp_min="25"
                     app:snp_value="5"
                     android:layout_marginRight="10dp"/>

             </LinearLayout>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"></LinearLayout>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"></LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_submit"
            android:id="@+id/fit_submit_btn"
            android:layout_marginRight="5dp"
            />
         <Button
             android:text="open Nav"
             android:id="@+id/setAlarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp" />
    </LinearLayout>

 </LinearLayout>


    <include layout="@layout/include_nav_drawer"/>

</android.support.v4.widget.DrawerLayout>
