<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Challenges.ChildGrowthActivity"
    tools:showIn="@layout/activity_child_growth">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginTop="10dp">

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    float:fletPadding="10dp">

                    <EditText
                        android:hint="@string/txt_chaName"
                        android:id="@+id/childgrowthName"
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/txt_bdy"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="15dp" />

                <com.vi.swipenumberpicker.SwipeNumberPicker
                    android:id="@+id/snp7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:snp_numberColor="@android:color/white"
                    app:snp_arrowColor="@android:color/white"
                    app:snp_backgroundColor="@color/colorAccent"
                    app:snp_max="8"
                    app:snp_min="1"
                    app:snp_value="5"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/txt_height"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="15dp"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <com.vi.swipenumberpicker.SwipeNumberPicker
                        android:id="@+id/snp0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:snp_numberColor="@android:color/white"
                        app:snp_arrowColor="@android:color/white"
                        app:snp_backgroundColor="@color/colorAccent"
                        app:snp_max="8"
                        app:snp_min="1"
                        app:snp_value="5"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/txt_weight"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="15dp"
                    android:gravity="center_vertical" />

                <com.vi.swipenumberpicker.SwipeNumberPicker
                    android:id="@+id/snp2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:snp_numberColor="@android:color/white"
                    app:snp_arrowColor="@android:color/white"
                    app:snp_backgroundColor="@color/colorAccent"
                    app:snp_max="8"
                    app:snp_min="1"
                    app:snp_value="5"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/txt_timeP"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="15dp" />

                <com.vi.swipenumberpicker.SwipeNumberPicker
                    android:id="@+id/snp8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:snp_numberColor="@android:color/white"
                    app:snp_arrowColor="@android:color/white"
                    app:snp_backgroundColor="@color/colorAccent"
                    app:snp_max="8"
                    app:snp_min="1"
                    app:snp_value="5"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginTop="15dp">

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    float:fletPadding="10dp">

                    <EditText
                        android:hint="Add your thoughts"
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/fit_submit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:minHeight="50dp"
                        android:minWidth="120dp"
                        android:text="@string/txt_btn_submit"
                        android:textColor="@android:color/white"
                        fbutton:buttonColor="@color/fbutton_color_peter_river"
                        fbutton:shadowEnabled="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent">

                    <info.hoang8f.widget.FButton
                        android:id="@+id/setAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:minHeight="50dp"
                        android:minWidth="120dp"
                        android:text="Set Alarm"
                        android:textColor="@android:color/white"
                        fbutton:buttonColor="@color/fbutton_color_peter_river"
                        fbutton:shadowEnabled="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
